# model_response2.go
@@ -1,0 +1,14 @@
+/*
+ * Tencent Docs SDK
+ *
+ * This is tencent docs editorapi sdk
+ *
+ * API version: 0.1.0
+ * Contact: tencentdocs@tencent.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type Response2 struct {
+	BatchUpdateDocDataRsp *BatchUpdateDocDataRsp `json:"batchUpdateDocDataRsp,omitempty"`
+}
