# model_user_response1.go
@@ -1,0 +1,16 @@
+/*
+ * Tencent Docs SDK
+ *
+ * This is tencent docs editorapi sdk
+ *
+ * API version: 0.1.0
+ * Contact: tencentdocs@tencent.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type UserResponse1 struct {
+	Ret int32 `json:"ret,omitempty"`
+	Msg string `json:"msg,omitempty"`
+	Data *Response1 `json:"data,omitempty"`
+}
